<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/notificationSettingsContainer"
    android:orientation="vertical">

    <TextView
        android:id="@+id/delayTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_delay_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TimePicker
        android:id="@+id/checkDelay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:autofillHints="@string/check_delay_title"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/tasksChannelTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tasks_notifications_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tasksChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/summary_setup_notifications"
        android:textSize="16sp"
        android:textStyle="bold"
        android:clickable="true" />

    <TextView
        android:id="@+id/messagesChannelTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/messages_notifications_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/messagesChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/summary_setup_notifications"
        android:textSize="16sp"
        android:textStyle="bold"
        android:clickable="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
</LinearLayout>
</ScrollView>