<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/logotype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/big_logo" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:selectAllOnFocus="true"
            android:maxLines="1"
            android:layout_marginVertical="10dp"
            android:hint="@string/prompt_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            android:maxLines="1"
            android:layout_marginVertical="10dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/button_login"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F44336" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="13dp"
            android:layout_marginBottom="7dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/settings_title"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_settings" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>